2024-07-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/INSTALL-unix.rst: Remove mention of the original MinGW which
	became dead and unusable at OSDN a couple of years ago.  It is not
	even possible to download the installer program.  The old version
	at SourceForge is all which remains working.

2024-07-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Assume that targets matching *-w64-mingw* are
	capable of supporting 'C99 printf syntax.
	(INT64_F, UINT64_F, MAGICK_SIZE_T_F, MAGICK_SSIZE_T_F): Try to
	intuit better MinGW printf syntax based on host_vendor setting.

	* wand/pixel_wand.c (ClonePixelWands): Eliminate GCC 14
	warning about MagickAllocateArray() argument order.

	* magick/magick.c (GetMagickInfoArray): Eliminate GCC 14
	warning about MagickAllocateArray() argument order.

	* magick/colormap.c (ReplaceImageColormap): Eliminate GCC 14
	warning about MagickAllocateArray() argument order.

	* wand/pixel_wand.c (PixelSetQuantumColor): Color argument is now
	a const pointer.
	* wand/pixel_wand.c Tidy and correct errors in the documentation
	text.

2024-06-28 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* magick/tiff.c: Possible division by 0 fixed.

2024-06-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/INSTALL-unix.rst: Add mention of --without-libzip.

	* README.txt: Add a section for libzip.

	* configure.ac: Add pkg-config support for libzip.

	* coders/tiff.c (WriteTIFFImage): Report an error if input image
	is not valid.

	* www/formats.rst: Add an entry for HRZ format.

2024-06-26  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* configure.ac: Typo fixed in library name.

2024-06-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c (ReadWPGImage): Quiet Coverity 427434 "Overflowed
	constant".

	* magick/blob.c (CloseBlob): Quiet Coverity 427439 "Data race
	condition".

	* coders/topol.c (CheckFName): Addess Coverity 427449 "Overflowed
	array index read".
