@@ -41,6 +41,11 @@
 <p>2024-07-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li><p>coders/fits.c (ReadFITSImage): Report an error if FITS frames
+have zero dimensions or contain no pixels.  Addresses core issue
+which resulted in oss-fuzz issue 69925:
+&quot;graphicsmagick:coder_TIFF_any_fuzzer: Floating-point-exception in
+WriteTIFFImage&quot;.</p></li>
 <li><p>www/INSTALL-unix.rst: Remove mention of the original MinGW which
 became dead and unusable at OSDN a couple of years ago.  It is not
 even possible to download the installer program.  The old version
